--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compress": "^0.99.0",
     "express": "^4.16.3",
     "expression": "0.0.1",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "unirest": "^0.6.0"
   }
 }
