--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "compress": "^0.99.0",
     "express": "^4.16.3",
+    "express-handlebars": "^6.0.2",
     "expression": "0.0.1",
     "socket.io": "^2.1.1",
     "unirest": "^0.6.0"
